--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.3.7",
+    "js-yaml": "^4.1.0",
     "mocha": "^10.2.0",
-    "sinon": "^15.0.3",
-    "js-yaml": "^4.1.0"
+    "sinon": "^15.0.3"
+  },
+  "dependencies": {
+    "prompt-context-builder": "^1.1.7"
   }
 }
